# OpenGLRaw

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  OpenGLRaw.cabal  README.markdown  README.md
.github/workflows/: haskell-ci.yml
RegistryProcessor/: LICENSE  RegistryProcessor.cabal  RegistryProcessor.cabal-disabled  generate-modules
RegistryProcessor/src/: DeclarationParser.hs  Main.hs  ManPages.hs  MangledRegistry.hs  Registry.hs
cbits/: HsOpenGLRaw.c
include/: CTypes.h  HsOpenGLRaw.h
src/Graphics/: GL.hs
src/Graphics/GL/: AMD.hs  APPLE.hs  ARB.hs  ATI.hs  Compatibility30.hs  Compatibility31.hs  Compatibility32.hs  Compatibility33.hs  Compatibility40.hs  Compatibility41.hs  Compatibility42.hs  Compatibility43.hs  Compatibility44.hs  Compatibility45.hs  Compatibility46.hs  Core30.hs  Core31.hs  Core32.hs  Core33.hs  Core40.hs  Core41.hs  Core42.hs  Core43.hs  Core44.hs  Core45.hs  Core46.hs  EXT.hs  ExtensionPredicates.hs  Foreign.hs  Functions.hs  GREMEDY.hs  GetProcAddress.hs  Groups.hs  HP.hs  IBM.hs  INGR.hs  INTEL.hs  KHR.hs  MESA.hs  MESAX.hs  (+25 more)
src/Graphics/GL/AMD/: BlendMinmaxFactor.hs  DebugOutput.hs  DepthClampSeparate.hs  DrawBuffersBlend.hs  FramebufferMultisampleAdvanced.hs  FramebufferSamplePositions.hs  GPUShaderHalfFloat.hs  GPUShaderInt64.hs  InterleavedElements.hs  MultiDrawIndirect.hs  NameGenDelete.hs  OcclusionQueryEvent.hs  PerformanceMonitor.hs  PinnedMemory.hs  QueryBufferObject.hs  SamplePositions.hs  SeamlessCubemapPerTexture.hs  SparseTexture.hs  StencilOperationExtended.hs  TransformFeedback4.hs  VertexShaderTessellator.hs
src/Graphics/GL/APPLE/: AuxDepthStencil.hs  ClientStorage.hs  ElementArray.hs  Fence.hs  FloatPixels.hs  FlushBufferRange.hs  ObjectPurgeable.hs  RGB422.hs  RowBytes.hs  SpecularVector.hs  TextureRange.hs  TransformHint.hs  VertexArrayObject.hs  VertexArrayRange.hs  VertexProgramEvaluators.hs  YCbCr422.hs
src/Graphics/GL/ARB/: BaseInstance.hs  BindlessTexture.hs  BlendFuncExtended.hs  BufferStorage.hs  CLEvent.hs  ClearBufferObject.hs  ClearTexture.hs  ClipControl.hs  ColorBufferFloat.hs  CompressedTexturePixelStorage.hs  ComputeShader.hs  ComputeVariableGroupSize.hs  ConditionalRenderInverted.hs  CopyBuffer.hs  CopyImage.hs  CullDistance.hs  DebugOutput.hs  DepthBufferFloat.hs  DepthClamp.hs  DepthTexture.hs  DirectStateAccess.hs  DrawBuffers.hs  DrawBuffersBlend.hs  DrawElementsBaseVertex.hs  DrawIndirect.hs  DrawInstanced.hs  ES2Compatibility.hs  ES31Compatibility.hs  ES32Compatibility.hs  ES3Compatibility.hs  EnhancedLayouts.hs  ExplicitUniformLocation.hs  FragmentProgram.hs  FragmentShader.hs  FramebufferNoAttachments.hs  FramebufferObjectCompatibility.hs  FramebufferObjectCore.hs  FramebufferSRGB.hs  GPUShader5.hs  GPUShaderFP64.hs  (+102 more)
src/Graphics/GL/ATI/: DrawBuffers.hs  ElementArray.hs  EnvmapBumpmap.hs  FragmentShader.hs  MapObjectBuffer.hs  Meminfo.hs  PNTriangles.hs  PixelFormatFloat.hs  SeparateStencil.hs  TextFragmentShader.hs  TextureEnvCombine3.hs  TextureFloat.hs  TextureMirrorOnce.hs  VertexArrayObject.hs  VertexAttribArrayObject.hs  VertexStreams.hs
src/Graphics/GL/EXT/: ABGR.hs  BGRA.hs  BindableUniform.hs  BlendColor.hs  BlendEquationSeparate.hs  BlendFuncSeparate.hs  BlendMinmax.hs  BlendSubtract.hs  CMYKA.hs  ClipVolumeHint.hs  ColorSubtable.hs  CompiledVertexArray.hs  Convolution.hs  CoordinateFrame.hs  CopyTexture.hs  CullVertex.hs  DebugLabel.hs  DebugMarker.hs  DepthBoundsTest.hs  DirectStateAccess.hs  DrawBuffers2.hs  DrawInstanced.hs  DrawRangeElements.hs  EglImageStorage.hs  ExternalBuffer.hs  FogCoord.hs  FourTwoTwoPixels.hs  FramebufferBlit.hs  FramebufferMultisample.hs  FramebufferMultisampleBlitScaled.hs  FramebufferObject.hs  FramebufferSRGB.hs  GPUProgramParameters.hs  GPUShader4.hs  GeometryShader4.hs  Histogram.hs  IndexArrayFormats.hs  IndexFunc.hs  IndexMaterial.hs  LightTexture.hs  (+64 more)
src/Graphics/GL/Functions/: F01.hs  F02.hs  F03.hs  F04.hs  F05.hs  F06.hs  F07.hs  F08.hs  F09.hs  F10.hs  F11.hs  F12.hs  F13.hs  F14.hs  F15.hs  F16.hs  F17.hs  F18.hs  F19.hs  F20.hs  F21.hs  F22.hs  F23.hs  F24.hs  F25.hs  F26.hs  F27.hs  F28.hs  F29.hs  F30.hs  F31.hs  F32.hs  F33.hs
src/Graphics/GL/GREMEDY/: FrameTerminator.hs  StringMarker.hs
src/Graphics/GL/HP/: ConvolutionBorderModes.hs  ImageTransform.hs  OcclusionTest.hs  TextureLighting.hs
src/Graphics/GL/IBM/: CullVertex.hs  MultimodeDrawArrays.hs  RasterposClip.hs  StaticData.hs  TextureMirroredRepeat.hs  VertexArrayLists.hs
src/Graphics/GL/INGR/: BlendFuncSeparate.hs  ColorClamp.hs  InterlaceRead.hs
src/Graphics/GL/INTEL/: BlackholeRender.hs  ConservativeRasterization.hs  FramebufferCmaa.hs  MapTexture.hs  ParallelArrays.hs  PerformanceQuery.hs
src/Graphics/GL/KHR/: BlendEquationAdvanced.hs  BlendEquationAdvancedCoherent.hs  ContextFlushControl.hs  DebugCompatibility.hs  DebugCore.hs  NoError.hs  ParallelShaderCompile.hs  Robustness.hs  TextureCompressionASTCHDR.hs  TextureCompressionASTCLDR.hs
src/Graphics/GL/MESA/: PackInvert.hs  ProgramBinaryFormats.hs  ResizeBuffers.hs  TileRasterOrder.hs  WindowPos.hs  YCbCrTexture.hs
src/Graphics/GL/MESAX/: TextureStack.hs
src/Graphics/GL/NV/: AlphaToCoverageDitherControl.hs  BindlessMultiDrawIndirect.hs  BindlessMultiDrawIndirectCount.hs  BindlessTexture.hs  BlendEquationAdvanced.hs  BlendEquationAdvancedCoherent.hs  BlendMinmaxFactor.hs  ClipSpaceWScaling.hs  CommandList.hs  ComputeProgram5.hs  ConditionalRender.hs  ConservativeRaster.hs  ConservativeRasterDilate.hs  ConservativeRasterPreSnap.hs  ConservativeRasterPreSnapTriangles.hs  CopyDepthToColor.hs  CopyImage.hs  DeepTexture3D.hs  DepthBufferFloat.hs  DepthClamp.hs  DrawTexture.hs  DrawVulkanImage.hs  Evaluators.hs  ExplicitMultisample.hs  Fence.hs  FillRectangle.hs  FloatBuffer.hs  FogDistance.hs  FragmentCoverageToColor.hs  FragmentProgram.hs  FragmentProgram2.hs  FramebufferMixedSamples.hs  FramebufferMultisampleCoverage.hs  GPUMulticast.hs  GPUProgram4.hs  GPUProgram5.hs  GPUShader5.hs  GeometryProgram4.hs  HalfFloat.hs  InternalformatSampleQuery.hs  (+53 more)
src/Graphics/GL/NVX/: ConditionalRender.hs  (+2 more)
(+647 files in other folders)
